--- a/package.json
+++ b/package.json
@@ -27,9 +27,8 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "animejs": "^3.1.0",
-    "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
+    "siema": "^1.5.1",
     "swiper": "^5.2.0",
     "waypoints": "^4.0.1"
   }
